# ELICA

./: .gitignore  .pre-commit-config.yaml  README.md  likelihood_validaton_modified_to_my_data.ipynb  pyproject.toml  requirements.txt  sampling.py  setup.py  test_elica.py
.github/workflows/: publish.yml  tests.yml
data/: 100x143_WLxWL_dict.pickle  100x143_dict.pickle  100xWL_dict.pickle  143xWL_dict.pickle  WL_WL_dict.pickle  full_dict.pickle
docs/: api.rst  citation.rst  conf.py  index.rst  installation.rst  likelihoods.rst  usage.rst
elica/: EE_100x100.yaml  EE_100x143.yaml  EE_100x143_100xWL.yaml  EE_100x143_100xWL_143xWL.yaml  EE_100x143_143xWL.yaml  EE_100x143_WLxWL.yaml  EE_100xWL.yaml  EE_143x143.yaml  EE_143xWL.yaml  EE_WLxWL.yaml  EE_full.yaml  EE_old100x143.yaml  EE_oldWLxWL.yaml  README.md  __init__.py  cross.yaml  elica.yaml  full.yaml  fullHL.yaml  hybridHL.yaml  likelihood.py  mHL.yaml
elica/data/: 100x100_dict.pickle  100x143_100xWL_143xWL_dict.pickle  100x143_143xWL_dict.pickle  100x143_dict.pickle  100xWL_dict.pickle  143x143_dict.pickle  143xWL_dict.pickle  EE_100x100.dataset  EE_100x143.dataset  EE_100xWL.dataset  EE_143x143.dataset  EE_143xWL.dataset  EE_WLxWL.dataset  README.md  WLxWL_dict.pickle  cross.dataset  elica.dataset  full.dataset  fullHL_dict.pickle  hybridHL_dict.pickle  mHL_dict.pickle  old100x143_dict.pickle  oldWLxWL_dict.pickle
elica/tests/: Test_cobaya_likelihood-2.ipynb  conftest.py  plot_sampling.py  (+6 more)
examples/: likelihood_grid.ipynb  sample_tau.py
tests/: conftest.py  test_class.py  test_regression.py  test_sampling.py
(+29 files in other folders)
